--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,50 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext {
+        kotlinVersion = '1.3.72'
+        glideVersion = '3.7.0'
+
+        // Common
+        appCompatVersion = '1.1.0'
+        androidKtxVersion = '1.3.0'
+        constraintlayoutVersion = '1.1.3'
+        recyclerViewVersion = '1.1.0'
+        cardViewVersion = '1.0.0'
+
+        // Glide
+        glideVersion = '4.9.0'
+
+        // Material
+        materialVersion = '1.1.0'
+
+        // MultiDex
+        multiDexVersion = '2.0.1'
+
+        // Retrofit
+        retrofitVersion = '2.5.0'
+
+        // OkHttp
+        okhttpVersion = '3.9.1'
+
+        // Koin
+        koinVersion = '2.0.1'
+
+        // Rx
+        rxJavaVersion = '2.1.3'
+        rxAndroidVersion = '2.1.1'
+
+        // Room
+        roomVersion = '2.2.5'
+    }
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
@@ -20,7 +52,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
 }
 
