2020. 06. 04 주홍민 - 금일 작업 내역 커밋.. - 열심히 MVVM, RxJava, Retrofit2 습득중..

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ buildscript {
 
         // Room
         roomVersion = '2.2.5'
+
+        // Coroutines
+        coroutinesVersion = '1.3.0'
     }
     repositories {
         google()
