--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         constraintlayoutVersion = '1.1.3'
         recyclerViewVersion = '1.1.0'
         cardViewVersion = '1.0.0'
+        viewModelVersion = '2.2.0'
 
         // Glide
         glideVersion = '4.9.0'
