--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -13,7 +13,9 @@
         android:name=".MainApplication"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.home.MainActivity">
+        <activity android:name=".ui.home.MainActivity"
+            android:launchMode="singleTop"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,6 +25,8 @@
 
         <activity android:name=".ui.login.LoginActivity"
             android:windowSoftInputMode="adjustResize"
+            android:theme="@style/LoginTheme"
+            android:launchMode="singleTop"
             />
     </application>
 
