--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,5 @@ kotlin.code.style=official
 android.enableJetifier=true
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.useAndroidX=true
-# 컴파일시 warning 으로 인해 일단 disble
+# kapat Warning Disable 泥섎━
 kapt.incremental.apt=false
