2020. 06. 08 주홍민 - 금일 작업 내역 반영

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,9 +91,9 @@ dependencies {
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
 
     // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$rootProject.coroutinesVersion"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$rootProject.coroutinesVersion"
 
     // Custom Behavior LIb
     implementation "com.hmju.custombehavior:custom-behavior:1.0.0"
