--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
         <activity android:name=".ui.home.MainActivity"
             android:launchMode="singleTop"
+            android:theme="@style/LoginTheme"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
