2020. 06. 13 주홍민 - 금일 작업 내역 반영 - 공통 클릭 이벤트에 대하여 고민좀 해야겠다..

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,14 @@ android {
         pickFirst("META-INF/kotlinx-coroutines-core.kotlin_module")
     }
 
-    dataBinding {
-        enabled = true
-    }
-
-//        buildFeatures {
-//        dataBinding = true
+//    dataBinding {
+//        enabled = true
 //    }
+
+    // Gradle 4.0.0 대응
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 dependencies {
