--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,27 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MainApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MainApplication"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.home.MainActivity"
+        <!-- 위젯 -->
+        <receiver android:name=".ui.widgt.MemoAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/memo_app_widget_info" />
+        </receiver>
+
+        <activity
+            android:name=".ui.home.MainActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +34,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.login.LoginActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:launchMode="singleTop"
-            />
     </application>
 
 </manifest>
