--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MainApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="${appLabel}"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MainApplication"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.home.MainActivity"
+        <activity
+            android:name=".ui.home.MainActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +23,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.login.LoginActivity"
-            android:windowSoftInputMode="adjustResize"
+        <activity
+            android:name=".ui.login.LoginActivity"
             android:launchMode="singleTop"
-            />
+            android:windowSoftInputMode="adjustResize" />
+
     </application>
 
 </manifest>
