--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".ui.memo.MemoDetailActivity"></activity>
+        <activity android:name=".ui.memo.MemoAddActivity" />
         <activity
             android:name=".ui.home.MainActivity"
             android:launchMode="singleTop">
@@ -22,12 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.login.LoginActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustResize" />
-
     </application>
 
 </manifest>
