2020. 06. 16 - 개발 금일 작업 내역 반영

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,27 @@ android {
     buildFeatures {
         dataBinding = true
     }
+
+    flavorDimensions "config"
+
+    productFlavors  {
+
+        dev {
+            dimension "config"
+            applicationIdSuffix  ".dev"
+            versionCode 1
+            versionName "0.0.1"
+            manifestPlaceholders = [appLabel: "DevApp"]
+        }
+
+        study {
+            dimension "config"
+            applicationIdSuffix  ".study"
+            versionCode 1
+            versionName "0.0.1"
+            manifestPlaceholders = [appLabel: "StudyApp"]
+        }
+    }
 }
 
 dependencies {
