--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext {
         kotlinVersion = '1.3.72'
         androidPluginVersion = '4.0.0'
+        googleServiceVersion = '4.3.3'
 
         // Common
         appCompatVersion = '1.1.0'
@@ -12,6 +13,7 @@ buildscript {
         recyclerViewVersion = '1.1.0'
         cardViewVersion = '1.0.0'
         viewModelVersion = '2.2.0'
+        locationVersion = '17.0.0'
 
         // Glide
         glideVersion = '4.9.0'
@@ -51,8 +53,9 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${androidPluginVersion}"
+        classpath "com.android.tools.build:gradle:$androidPluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "com.google.gms:google-services:$googleServiceVersion"
     }
 }
 
