--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ buildscript {
         rxJavaVersion = '2.1.3'
         rxAndroidVersion = '2.1.1'
         rxPermissionVersion = '0.10.2'
+
+        // Paging Lib
+        pagingVersion = '2.1.2'
     }
     repositories {
         google()
