--- a/build.gradle
+++ b/build.gradle
@@ -6,30 +6,30 @@ buildscript {
         androidPluginVersion = '4.0.1'
 
         // Common
-        appCompatVersion = '1.1.0'
-        androidKtxVersion = '1.3.0'
-        constraintlayoutVersion = '1.1.3'
+        appCompatVersion = '1.2.0'
+        androidKtxVersion = '1.3.1'
+        constraintlayoutVersion = '2.0.0-beta8'
         recyclerViewVersion = '1.1.0'
         cardViewVersion = '1.0.0'
         viewModelVersion = '2.2.0'
 
         // Glide
-        glideVersion = '4.9.0'
+        glideVersion = '4.11.0'
 
         // Material
-        materialVersion = '1.1.0'
+        materialVersion = '1.2.0'
 
         // MultiDex
         multiDexVersion = '2.0.1'
 
         // Retrofit
-        retrofitVersion = '2.6.4'
+        retrofitVersion = '2.9.0'
 
         // Retrofit Coroutines
         retrofitCoroutineAdapterVersion = '0.9.2'
 
         // OkHttp
-        okhttpVersion = '3.9.1'
+        okhttpVersion = '4.8.0'
 
         // Koin
         koinVersion = '2.0.1'
@@ -41,12 +41,15 @@ buildscript {
         coroutinesVersion = '1.3.0'
 
         // Reactive X
-        rxJavaVersion = '2.1.3'
+        rxJavaVersion = '2.2.6'
         rxAndroidVersion = '2.1.1'
         rxPermissionVersion = '0.10.2'
 
         // Paging Lib
         pagingVersion = '2.1.2'
+
+        // MotionLayout
+        motionLayoutVersion = '2.0.0-rc1'
     }
     repositories {
         google()
