--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.hmju.memo"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0.0"
@@ -20,7 +20,7 @@ android {
     buildTypes {
         debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-debug.pro'
         }
 
         release {
@@ -29,9 +29,9 @@ android {
         }
     }
 
-    packagingOptions {
-        pickFirst("META-INF/kotlinx-coroutines-core.kotlin_module")
-    }
+//    packagingOptions {
+//        pickFirst("META-INF/kotlinx-coroutines-core.kotlin_module")
+//    }
 
 //    dataBinding {
 //        enabled = true
@@ -51,7 +51,7 @@ android {
             applicationIdSuffix  ".dev"
             versionCode 1
             versionName "0.0.1"
-            manifestPlaceholders = [appLabel: "DevApp"]
+            manifestPlaceholders = [appLabel: "DevApp",testOnly: "true"]
         }
 
         study {
@@ -59,7 +59,8 @@ android {
             applicationIdSuffix  ".study"
             versionCode 1
             versionName "0.0.1"
-            manifestPlaceholders = [appLabel: "StudyApp"]
+            manifestPlaceholders = [appLabel: "StudyApp", testOnly: "false"]
+            buildConfigField "Boolean" , "APP_DEBUG" , "true"
         }
     }
 
@@ -82,6 +83,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerViewVersion"
     implementation "androidx.cardview:cardview:$rootProject.cardViewVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.viewModelVersion"
+    implementation 'androidx.navigation:navigation-runtime:2.1.0'
     kapt "com.android.databinding:compiler:$rootProject.androidPluginVersion"
 
     testImplementation 'junit:junit:4.13'
@@ -146,7 +148,11 @@ dependencies {
     // optional - RxJava support
     implementation "androidx.paging:paging-rxjava2:$rootProject.pagingVersion" // For Kotlin use paging-rxjava2-ktx
 
-    // MotionLayout
-//    implementation "com.android.support.constraint:constraint-layout:$rootProject.motionLayoutVersion"
+    // FireBase
+    implementation "com.google.firebase:firebase-core:$rootProject.firebaseCoreVersion"
+    implementation "com.google.firebase:firebase-messaging:$rootProject.firebaseMessageVersion"
 
+    //Navigation Architecture Component
+    implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navVersion"
 }
