--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@
 
 buildscript {
     ext {
-        kotlinVersion = '1.3.72'
+        kotlinVersion = '1.4.0'
         androidPluginVersion = '4.0.1'
 
         // Common
         appCompatVersion = '1.2.0'
         androidKtxVersion = '1.3.1'
-        constraintlayoutVersion = '2.0.0-beta8'
+        constraintlayoutVersion = '2.0.0'
         recyclerViewVersion = '1.1.0'
         cardViewVersion = '1.0.0'
         viewModelVersion = '2.2.0'
@@ -29,7 +29,7 @@ buildscript {
         retrofitCoroutineAdapterVersion = '0.9.2'
 
         // OkHttp
-        okhttpVersion = '4.8.0'
+        okhttpVersion = '4.8.1'
 
         // Koin
         koinVersion = '2.0.1'
@@ -50,6 +50,14 @@ buildscript {
 
         // MotionLayout
         motionLayoutVersion = '2.0.0-rc1'
+
+        // FireBase
+        googleServiceVersion = '4.2.0'
+        firebaseCoreVersion = '17.5.0'
+        firebaseMessageVersion = '20.2.4'
+
+        // Navigation Architecture Component
+        navVersion = '2.3.0'
     }
     repositories {
         google()
@@ -59,6 +67,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:${androidPluginVersion}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "com.google.gms:google-services:${googleServiceVersion}"
     }
 }
 
