2020. 09. 07 주홍민 - 오늘 작업 내역 반영

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,12 @@
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.Login"
             android:windowSoftInputMode="adjustResize" />
-<!--        <activity android:name=".ui.memo.MemoDetailActivity" />-->
+
+        <activity
+            android:name=".ui.memo.MemoDetailActivity"
+            android:theme="@style/AppTheme.MemoDetail"
+            android:windowSoftInputMode="adjustResize" />
+
         <activity android:name=".ui.memo.MemoAddActivity" />
     </application>
 
