--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.hmju.memo">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".MainApplication"
@@ -13,7 +16,6 @@
         android:testOnly="${testOnly}"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
         <activity
             android:name=".ui.home.MainActivity"
             android:configChanges="uiMode"
@@ -41,14 +43,31 @@
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.Login"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".ui.memo.MemoDetailActivity"
             android:configChanges="uiMode"
             android:theme="@style/AppTheme.MemoDetail"
             android:windowSoftInputMode="adjustResize" />
-
         <activity android:name=".ui.memo.MemoAddActivity" />
+
+        <activity
+            android:name=".ui.album.AlbumActivity"
+            android:configChanges="uiMode"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <!-- [s] 카메라 캡처 관련 -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.hmju.memo"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+        <!-- [e] 카메라 캡처 관련 -->
+
     </application>
 
 </manifest>
