2020. 09. 20 - 파일 업로드 로직 추가. - Scoped Storage 대응 처리 - 앨범 선택 로직 개선

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ android {
             versionCode 1
             versionName "0.0.1"
             manifestPlaceholders = [appLabel: "DevApp",testOnly: "true"]
+            buildConfigField "Boolean" , "IS_DEBUG" , "true"
         }
 
         study {
@@ -60,7 +61,7 @@ android {
             versionCode 1
             versionName "0.0.1"
             manifestPlaceholders = [appLabel: "StudyApp", testOnly: "false"]
-            buildConfigField "Boolean" , "APP_DEBUG" , "true"
+            buildConfigField "Boolean" , "IS_DEBUG" , "false"
         }
     }
 
