2020. 09. 21 - 갤러리 페이지 필터 관련 개발중....어떻게 처리를 해야 할까...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         <activity android:name=".ui.memo.MemoAddActivity" />
 
         <activity
-            android:name=".ui.album.AlbumActivity"
+            android:name=".ui.gallery.GalleryActivity"
             android:configChanges="uiMode"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
