--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,4 +157,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navVersion"
     implementation "androidx.navigation:navigation-runtime:$rootProject.navVersion"
 
+    // Loading Lib
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
 }
