2020. 10. 04. 수정사항 - 메모 추가 페이지 및 로직 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,12 +42,16 @@
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.Login"
             android:windowSoftInputMode="adjustResize" />
+        
         <activity
             android:name=".ui.memo.MemoDetailActivity"
             android:theme="@style/AppTheme.MemoDetail"
             android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name=".ui.memo.MemoAddActivity" />
+        <activity
+            android:name=".ui.memo.MemoAddActivity"
+            android:theme="@style/AppTheme.MemoDetail"
+            android:windowSoftInputMode="adjustResize" />
 
         <activity
             android:name=".ui.gallery.GalleryActivity"
