2020. 10. 06. 수정사항 - ImageView 기반의 PitchZoom, Rotate, Move 가능한 View 생성. - View 캡처 기능 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity
             android:name=".ui.home.MainActivity"
             android:launchMode="singleTop"
-            android:theme="@style/AppTheme.Memo">
+            android:theme="@style/AppTheme.Memo"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -58,8 +59,8 @@
 
         <activity
             android:name=".ui.imageEdit.ImageEditActivity"
-            android:theme="@style/AppTheme.Gallery"
-            android:windowSoftInputMode="adjustPan"/>
+            android:theme="@style/AppTheme.Memo"
+            android:windowSoftInputMode="adjustPan" />
 
         <!-- [s] 카메라 캡처 관련 -->
         <provider
