2020. 10. 11. 수정사항 - 금일 작업 내역 반영 - ImageFileProvider 클래스 추가 및 메모 추가, 메모 상세 페이지 개선 작업중..

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,8 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
+        <!-- [s] 카메라 캡처 관련 -->
+
     </application>
 
 </manifest>
