--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,16 +41,19 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Login"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.memo.MemoDetailActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.MemoDetail"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.memo.MemoAddActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.MemoDetail"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.gallery.GalleryActivity"
             android:screenOrientation="portrait"
@@ -59,6 +62,7 @@
 
         <activity
             android:name=".ui.imageEdit.ImageEditActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Memo"
             android:windowSoftInputMode="adjustPan" />
 
